--- a/index.html
+++ b/index.html
@@ -1,1 +1,102 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>🎲 40 Tilfældige Roblox-avatarer</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      background: #f2f2f2;
+      text-align: center;
+    }
+    .avatar-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+      gap: 10px;
+      max-width: 1000px;
+      margin: 0 auto;
+      padding: 20px;
+    }
+    .avatar-card {
+      background: white;
+      padding: 10px;
+      border-radius: 10px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+    img {
+      border-radius: 50%;
+      width: 100px;
+      height: 100px;
+      cursor: pointer;
+    }
+    button {
+      margin: 20px 10px;
+      padding: 10px 20px;
+      font-size: 16px;
+      cursor: pointer;
+    }
+  </style>
+</head>
+<body>
 
+  <h1>🎲 40 Tilfældige Roblox-avatarer</h1>
+  <button onclick="loadAvatars()">🔁 Vis første 40</button>
+  <button onclick="loadAvatars()">⏭️ NÆSTE</button>
+  <div class="avatar-grid" id="avatarGrid"></div>
+
+  <script>
+    let worldVillageAvatarURL = "";
+
+    async function getWorldVillageAvatar() {
+      const res = await fetch("https://users.roblox.com/v1/usernames/users", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ usernames: ["WorldVillage"] })
+      });
+      const data = await res.json();
+      const userId = data.data[0]?.id;
+      if (userId) {
+        worldVillageAvatarURL = `https://www.roblox.com/headshot-thumbnail/image?userId=${userId}&width=420&height=420&format=png`;
+      }
+    }
+
+    async function loadAvatars() {
+      const grid = document.getElementById("avatarGrid");
+      grid.innerHTML = "";
+
+      let shown = 0;
+      while (shown < 40) {
+        const userId = Math.floor(Math.random() * (2000000000 - 40000)) + 40000; // ALTID over 40000
+        const avatarUrl = `https://www.roblox.com/headshot-thumbnail/image?userId=${userId}&width=420&height=420&format=png`;
+
+        if (avatarUrl === worldVillageAvatarURL) continue;
+
+        const card = document.createElement("div");
+        card.className = "avatar-card";
+
+        const img = document.createElement("img");
+        img.src = avatarUrl;
+        img.onclick = () => window.open(`https://www.roblox.com/users/${userId}/profile`, "_blank");
+
+        const name = document.createElement("p");
+        name.innerText = "Indlæser...";
+
+        card.appendChild(img);
+        card.appendChild(name);
+        grid.appendChild(card);
+
+        try {
+          const res = await fetch(`https://users.roblox.com/v1/users/${userId}`);
+          const data = await res.json();
+          name.innerText = data.name ?? "Ukendt";
+        } catch {
+          name.innerText = "❌ Ikke fundet";
+        }
+
+        shown++;
+      }
+    }
+
+    getWorldVillageAvatar().then(loadAvatars);
+  </script>
+</body>
+</html>
