--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
       margin: 0;
       padding: 0;
     }
-
     h1 {
       margin-top: 30px;
       font-size: 3rem;
@@ -21,11 +20,9 @@
       -webkit-text-fill-color: transparent;
       font-weight: bold;
     }
-
     .button-row {
       margin: 20px;
     }
-
     button {
       background-color: #0099ff;
       color: white;
@@ -37,12 +34,10 @@
       cursor: pointer;
       transition: transform 0.2s, background-color 0.3s;
     }
-
     button:hover {
       background-color: #0077cc;
       transform: scale(1.05);
     }
-
     .avatar-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(130px, 1fr));
@@ -50,8 +45,8 @@
       max-width: 1100px;
       margin: 0 auto;
       padding: 20px;
+      min-height: 300px;
     }
-
     .avatar-card {
       background: white;
       border-radius: 15px;
@@ -59,11 +54,9 @@
       box-shadow: 0 4px 10px rgba(0,0,0,0.1);
       transition: transform 0.2s;
     }
-
     .avatar-card:hover {
       transform: translateY(-5px);
     }
-
     img {
       border-radius: 50%;
       width: 100px;
@@ -72,10 +65,14 @@
       margin-bottom: 10px;
       cursor: pointer;
     }
-
     p {
       font-weight: bold;
       margin: 0;
+    }
+    #loadingText {
+      font-size: 1.2rem;
+      margin-top: 30px;
+      color: #555;
     }
   </style>
 </head>
@@ -86,12 +83,14 @@
     <button onclick="loadAvatars()">🔁 Vis 40 avatarer</button>
     <button onclick="loadAvatars()">⏭️ NÆSTE</button>
   </div>
+  <div id="loadingText">Indlæser avatarer…</div>
   <div class="avatar-grid" id="avatarGrid"></div>
 
   <script>
     let worldVillageAvatarURL = "";
 
     async function getWorldVillageAvatar() {
+      console.log("Henter WorldVillage avatar...");
       const res = await fetch("https://users.roblox.com/v1/usernames/users", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
@@ -101,16 +100,22 @@
       const userId = data.data[0]?.id;
       if (userId) {
         worldVillageAvatarURL = `https://www.roblox.com/headshot-thumbnail/image?userId=${userId}&width=420&height=420&format=png`;
+        console.log("WorldVillage avatar URL fundet:", worldVillageAvatarURL);
+      } else {
+        console.warn("Kunne ikke finde WorldVillage userId!");
       }
     }
 
     async function loadAvatars() {
       const grid = document.getElementById("avatarGrid");
+      const loadingText = document.getElementById("loadingText");
       grid.innerHTML = "";
+      loadingText.style.display = "block";
+      loadingText.innerText = "Indlæser avatarer…";
 
       let shown = 0;
       let tries = 0;
-      const maxTries = 300;
+      const maxTries = 400;
 
       while (shown < 40 && tries < maxTries) {
         tries++;
@@ -146,12 +151,14 @@
           continue;
         }
       }
+      loadingText.style.display = "none";
+      console.log(`Viste ${shown} avatarer efter ${tries} forsøg.`);
     }
 
-    // Kør automatisk ved sideindlæsning
+    // Vent på avatar-URL, før vi loader
     window.onload = async () => {
       await getWorldVillageAvatar();
-      loadAvatars();
+      await loadAvatars();
     };
   </script>
 </body>
